[gd_scene load_steps=28 format=3 uid="uid://lakvsrra3wdc"]

[ext_resource type="FontFile" uid="uid://bfulrtgnpdxb5" path="res://字体/进度条文本.tres" id="1"]
[ext_resource type="FontFile" path="res://字体/标题.tres" id="4"]
[ext_resource type="FontFile" path="res://字体/number.tres" id="4_avm47"]
[ext_resource type="Texture2D" uid="uid://wnvy23lfk22n" path="res://Resource/texture/Point.png" id="5"]
[ext_resource type="PackedScene" uid="uid://d2x86ewor0p62" path="res://UI/UI.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://brtxymjhomfrl" path="res://Resource/texture/P_Point.png" id="6_3fn0i"]
[ext_resource type="FontFile" path="res://字体/分数标题.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://wnltn64cscho" path="res://Resource/texture/生命心值.png" id="8"]
[ext_resource type="Script" path="res://NumberPanel.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://db27h2qfhkxhi" path="res://Resource/texture/符卡值.png" id="10"]
[ext_resource type="Script" path="res://GameWindow.gd" id="11"]
[ext_resource type="FontFile" uid="uid://c5o8vt8loqopj" path="res://字体/WenQuanDianZhenZhengHei-1.ttf" id="13"]
[ext_resource type="StyleBox" uid="uid://kcop8uhva3ey" path="res://GameWindow配色.tres" id="13_0rpnd"]
[ext_resource type="Script" path="res://GameOverWindow.gd" id="14"]
[ext_resource type="Script" path="res://MainMenu.gd" id="14_otkbh"]
[ext_resource type="FontFile" uid="uid://cqaf3f2x2dgg8" path="res://字体/VonwaonBitmap-16px.ttf" id="14_vor10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i56db"]
bg_color = Color(0.192157, 0.666667, 0.772549, 1)

[sub_resource type="FontVariation" id="FontVariation_xe6sr"]
base_font = ExtResource("13")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ke8b8"]
bg_color = Color(0.129412, 0.658824, 0.827451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_balp2"]
bg_color = Color(0.443137, 0.768627, 0.909804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eenx0"]
bg_color = Color(0.192157, 0.666667, 0.772549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_536y6"]
font = ExtResource("13")
font_size = 76

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odvdl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xk6bd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wspwg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7kpd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4ptj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="东方弹幕绘" type="Node2D"]

[node name="GameWindow" type="Panel" parent="."]
offset_right = 800.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i56db")
script = ExtResource("11")

[node name="SubViewportContainer" type="SubViewportContainer" parent="GameWindow"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 496.0
offset_bottom = 574.0

[node name="SubViewport" type="SubViewport" parent="GameWindow/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(480, 560)
render_target_update_mode = 4

[node name="NumberPanel" type="ReferenceRect" parent="GameWindow"]
layout_mode = 0
offset_left = 503.0
offset_top = 19.0
offset_right = 771.0
offset_bottom = 579.0
border_color = Color(0.0705882, 0.254902, 0.968627, 1)
script = ExtResource("9")

[node name="历史得分" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 10.0
offset_right = 179.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("7")
text = "历史得分"
horizontal_alignment = 1
vertical_alignment = 1

[node name="当前得分" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 72.0
offset_right = 179.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("7")
text = "当前分数"
horizontal_alignment = 1
vertical_alignment = 1

[node name="point_num_1" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 37.0
offset_top = 105.0
offset_right = 219.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("4_avm47")
text = "10000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="point_num_2" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 37.0
offset_top = 43.0
offset_right = 219.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_avm47")
text = "10000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="残机" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 154.0
offset_right = 45.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("4")
text = "残机"

[node name="符卡" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 180.0
offset_right = 45.0
offset_bottom = 204.0
theme_override_fonts/font = ExtResource("4")
text = "符卡"

[node name="灵力" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 229.0
offset_right = 68.0
offset_bottom = 253.0
theme_override_fonts/font = SubResource("FontVariation_xe6sr")
theme_override_font_sizes/font_size = 16
text = "灵力"

[node name="P点图标" type="TextureRect" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 229.0
offset_right = 32.0
offset_bottom = 252.0
texture = ExtResource("6_3fn0i")

[node name="点图标" type="TextureRect" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 255.0
offset_right = 32.0
offset_bottom = 278.0
texture = ExtResource("5")

[node name="得点" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 255.0
offset_right = 68.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("13")
theme_override_font_sizes/font_size = 16
text = "得点"

[node name="Point" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 255.0
offset_right = 115.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("4_avm47")
text = "0"

[node name="擦弹" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 279.0
offset_right = 68.0
offset_bottom = 303.0
theme_override_fonts/font = ExtResource("4")
text = "擦弹"

[node name="Graze" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 279.0
offset_right = 115.0
offset_bottom = 303.0
theme_override_fonts/font = ExtResource("4_avm47")
text = "0"

[node name="FireBar" type="ProgressBar" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 231.0
offset_right = 186.0
offset_bottom = 252.0
theme_override_styles/background = SubResource("StyleBoxFlat_ke8b8")
theme_override_styles/fill = SubResource("StyleBoxFlat_balp2")
show_percentage = false

[node name="Label" type="Label" parent="GameWindow/NumberPanel/FireBar"]
layout_mode = 0
offset_left = 2.0
offset_right = 62.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1")
text = "MAX"

[node name="LifeGrid" type="GridContainer" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 49.0
offset_top = 156.0
offset_right = 285.0
offset_bottom = 176.0
columns = 10

[node name="Life1" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life2" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life3" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life4" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life5" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life6" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life7" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life8" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life9" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="Life10" type="TextureRect" parent="GameWindow/NumberPanel/LifeGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("8")
stretch_mode = 5

[node name="BombGrid" type="GridContainer" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = 49.0
offset_top = 181.0
offset_right = 285.0
offset_bottom = 201.0
columns = 10

[node name="Bomb1" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb2" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb3" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")
stretch_mode = 5

[node name="Bomb4" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb5" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb6" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb7" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb8" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb9" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="Bomb10" type="TextureRect" parent="GameWindow/NumberPanel/BombGrid"]
layout_mode = 2
texture = ExtResource("10")

[node name="TimeLeft" type="Label" parent="GameWindow/NumberPanel"]
layout_mode = 0
offset_left = -88.0
offset_top = -10.0
offset_right = -7.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_avm47")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOverWindow" type="Panel" parent="."]
visible = false
offset_right = 800.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eenx0")
script = ExtResource("14")

[node name="Label" type="Label" parent="GameOverWindow"]
layout_mode = 0
offset_left = 192.0
offset_top = 95.0
offset_right = 612.0
offset_bottom = 187.0
theme_override_fonts/font = ExtResource("13")
theme_override_font_sizes/font_size = 70
text = "游戏结束界面"

[node name="PauseMenu" type="Panel" parent="."]
visible = false
offset_right = 800.0
offset_bottom = 600.0

[node name="MainMenu" type="Panel" parent="."]
offset_right = 800.0
offset_bottom = 600.0
theme_override_styles/panel = ExtResource("13_0rpnd")
script = ExtResource("14_otkbh")

[node name="标题" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 22.0
offset_top = 58.0
offset_right = 402.0
offset_bottom = 163.0
text = "东方弹幕绘"
label_settings = SubResource("LabelSettings_536y6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="MainMenu"]
anchors_preset = 0
offset_left = 426.0
offset_top = 161.0
offset_right = 805.0
offset_bottom = 597.0

[node name="GameStart" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 186.0
offset_top = 81.0
offset_right = 314.0
offset_bottom = 113.0
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../ExtraStart")
focus_neighbor_bottom = NodePath("../ExtraStart")
focus_next = NodePath("../ExtraStart")
focus_previous = NodePath("../Quit")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "开始游戏"

[node name="ExtraStart" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 162.0
offset_top = 122.0
offset_right = 290.0
offset_bottom = 154.0
focus_neighbor_left = NodePath("../GameStart")
focus_neighbor_top = NodePath("../GameStart")
focus_neighbor_right = NodePath("../Practice")
focus_neighbor_bottom = NodePath("../Practice")
focus_next = NodePath("../Practice")
focus_previous = NodePath("../GameStart")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "特殊关卡"

[node name="Practice" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 130.0
offset_top = 159.0
offset_right = 258.0
offset_bottom = 191.0
focus_neighbor_left = NodePath("../ExtraStart")
focus_neighbor_top = NodePath("../ExtraStart")
focus_neighbor_right = NodePath("../Replay")
focus_neighbor_bottom = NodePath("../Replay")
focus_next = NodePath("../Replay")
focus_previous = NodePath("../ExtraStart")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "练习模式"

[node name="Replay" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 100.0
offset_top = 199.0
offset_right = 228.0
offset_bottom = 231.0
focus_neighbor_left = NodePath("../Practice")
focus_neighbor_top = NodePath("../Practice")
focus_neighbor_right = NodePath("../Music Room")
focus_neighbor_bottom = NodePath("../Music Room")
focus_next = NodePath("../Music Room")
focus_previous = NodePath("../Practice")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "回放模式"

[node name="Music Room" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 130.0
offset_top = 239.0
offset_right = 258.0
offset_bottom = 271.0
focus_neighbor_left = NodePath("../Replay")
focus_neighbor_top = NodePath("../Replay")
focus_neighbor_right = NodePath("../Option")
focus_neighbor_bottom = NodePath("../Option")
focus_next = NodePath("../Option")
focus_previous = NodePath("../Replay")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "音乐欣赏"

[node name="Option" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 134.0
offset_top = 278.0
offset_right = 262.0
offset_bottom = 310.0
focus_neighbor_left = NodePath("../Music Room")
focus_neighbor_top = NodePath("../Music Room")
focus_neighbor_right = NodePath("../Manual")
focus_neighbor_bottom = NodePath("../Manual")
focus_next = NodePath("../Manual")
focus_previous = NodePath("../Music Room")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "设置"

[node name="Manual" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 199.0
offset_top = 321.0
offset_right = 327.0
offset_bottom = 353.0
focus_neighbor_left = NodePath("../Option")
focus_neighbor_top = NodePath("../Option")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Option")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "玩家手册"

[node name="Quit" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 226.0
offset_top = 359.0
offset_right = 354.0
offset_bottom = 391.0
focus_neighbor_left = NodePath("../Manual")
focus_neighbor_top = NodePath("../Manual")
focus_neighbor_right = NodePath("../GameStart")
focus_neighbor_bottom = NodePath("../GameStart")
focus_next = NodePath("../GameStart")
focus_previous = NodePath("../Manual")
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_focus_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.909804, 0.780392, 0, 1)
theme_override_colors/font_disabled_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_vor10")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_odvdl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xk6bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wspwg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j7kpd")
theme_override_styles/focus = SubResource("StyleBoxFlat_o4ptj")
text = "退出游戏
"

[node name="FPS" type="Label" parent="."]
offset_left = 648.0
offset_top = 563.0
offset_right = 799.0
offset_bottom = 600.0
auto_translate = false
theme_override_fonts/font = ExtResource("13")
theme_override_font_sizes/font_size = 26
text = "FPS:60"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UI" parent="." instance=ExtResource("6")]
visible = false

[connection signal="pressed" from="MainMenu/Buttons/GameStart" to="MainMenu" method="_on_game_start_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Quit" to="MainMenu" method="_on_quit_pressed"]
